force-app/main/default/objects/Lead/fields/FirstEmailSentDate__c.field-meta.xml
<CustomField>
    <fullName>FirstEmailSentDate__c</fullName>
    <label>FirstEmailSentDate</label>
    <type>DateTime</type>
</CustomField>