force-app/main/default/objects/Lead/fields/IsFirstEmailSent__c.field-meta.xml
<CustomField>
    <fullName>IsFirstEmailSent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsFirstEmailSent</label>
    <type>Checkbox</type>
</CustomField>