force-app/main/default/objects/Lead/fields/IsFirstFollowUpSent__c.field-meta.xml
<CustomField>
    <fullName>IsFirstFollowUpSent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsFirstFollowUpSent</label>
    <type>Checkbox</type>
</CustomField>