force-app/main/default/objects/Lead/fields/IsSecondFollowUpSent__c.field-meta.xml
<CustomField>
    <fullName>IsSecondFollowUpSent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSecondFollowUpSent</label>
    <type>Checkbox</type>
</CustomField>