force-app/main/default/objects/Lead/fields/IsThirdFollowUpSent__c.field-meta.xml
<CustomField>
    <fullName>IsThirdFollowUpSent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsThirdFollowUpSent</label>
    <type>Checkbox</type>
</CustomField>