force-app/main/default/objects/Lead/fields/Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>Lead_Score__c</fullName>
    <formula>(IF(Budget__c &gt; 0, 20, 0)) + 

CASE(Timeline__c, 
    &quot;Immediate&quot;, 30, 
    &quot;1-3 months&quot;, 20, 
    &quot;3-6 months&quot;, 10, 
    0) + 

IF(INCLUDES(Technology_Interest__c, &quot;Digital Transformation&quot;), 10, 0) + 
IF(INCLUDES(Technology_Interest__c, &quot;IT Consulting&quot;), 10, 0) + 
IF(INCLUDES(Technology_Interest__c, &quot;Data Analytics&quot;), 15, 0) + 
IF(INCLUDES(Technology_Interest__c, &quot;Cloud Consulting&quot;), 20, 0) + 
IF(INCLUDES(Technology_Interest__c, &quot;Game Platform Services&quot;), 15, 0) + 
IF(INCLUDES(Technology_Interest__c, &quot;CRM Services&quot;), 20, 0) + 
IF(INCLUDES(Technology_Interest__c, &quot;Quality Assurance&quot;), 10, 0) + 
IF(INCLUDES(Technology_Interest__c, &quot;SaaS Product Engineering&quot;), 20, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>