force-app/main/default/objects/Lead/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>This is used to update the Lead Status after sending campaign and follow-up emails</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Email Sent</fullName>
                <default>true</default>
                <label>No Email Sent</label>
            </value>
            <value>
                <fullName>Campaign Email Sent</fullName>
            </value>
            <value>
                <fullName>1st Follow-Up Sent</fullName>
            </value>
            <value>
                <fullName>2nd Follow-Up Sent</fullName>
            </value>
            <value>
                <fullName>3rd Follow-Up Sent</fullName>
            </value>
            <value>
                <fullName>4th Follow-Up Sent</fullName>
            </value>
            <value>
                <fullName>5th Follow-Up Sent</fullName>
            </value>
            <value>
                <fullName>6th Follow-Up Sent</fullName>
            </value>
            <value>
                <fullName>7th Follow-Up Sent</fullName>
            </value>
            <value>
                <fullName>8th Follow-Up Sent</fullName>
            </value>
            <value>
                <fullName>9th Follow-Up Sent</fullName>
            </value>
            <value>
                <fullName>10th Follow-Up Sent</fullName>
            </value>
            <value>
                <fullName>Replied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>