force-app/main/default/objects/Lead/fields/Timeline__c.field-meta.xml
<CustomField>
    <fullName>Timeline__c</fullName>
    <label>Timeline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
            </value>
            <value>
                <fullName>1-3 months</fullName>
            </value>
            <value>
                <fullName>4-6 months</fullName>
            </value>
            <value>
                <fullName>6+ months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>